# tag_referencer

./: .gitmodules  CMakeLists.txt  LICENSE  README  README.md  package.xml
config/: settings.yaml  settings_all.yaml  settings_calib.yaml  settings_objects.yaml
launch/: aprilTag_realsense_live.launch  april_calibration.launch  april_calibration_dev.launch  bag_data.launch  demo_live_realsense_qrcode_referencer.launch  demo_live_zed_qrcode_referencer.launch  dev_bag_qrcode_referencer.launch  dev_live_asus_qrcode_referencer.launch  dev_live_kinect2_qrcode_referencer.launch  dev_live_qrcode_referencer.launch  dev_live_realsense_qrcode_referencer.launch  dev_qrcode_referencer.launch  qrcode_referencer.launch  qrcode_referencer_realsense.launch  qrcode_referencer_realsense_objects.launch  replay_bag.launch  simulation.launch  zed_camera.launch
msg/: QRCodeData.msg
qr_examples/: example_qr.json  example_qr.txt
qr_examples/qrcodes/: example_qr.txt
realsensConfig/: realsenseCommon.json
rvizConfig/: dev.rviz
src/: april_calibrator.cpp  box_detector.cpp  qrcode_referencer.cpp
src/data/: CMakeLists.txt  ImageData.cpp  ImageData.h  QRCodeData.cpp  QRCodeData.h
src/helper/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  TransformationHandler.cpp  TransformationHandler.h
src/scanning/: AprilTagScanner.cpp  AprilTagScanner.h  BoxDetector.cpp  BoxDetector.h  CMakeLists.txt  QRScanner.cpp  QRScanner.h  ScannerBase.cpp  ScannerBase.h
src/transformations/: CMakeLists.txt  PoseDerivator.cpp  PoseDerivator.h  TransformationManager.cpp  TransformationManager.h
